src/style/style.css
html {
  box-sizing: border-box;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}

:root {
  --c-white: #fbfbfb;
  --c-black: #1b1b1b;
  --c-accent: #b62020;

  --step--2: clamp(0.7813rem, 0.7321rem + 0.1899vw, 0.96rem);
  --step--1: clamp(0.9375rem, 0.8653rem + 0.2789vw, 1.2rem);
  --step-0: clamp(1.125rem, 1.0219rem + 0.3984vw, 1.5rem);
  --step-1: clamp(1.35rem, 1.2057rem + 0.5578vw, 1.875rem);
  --step-2: clamp(1.62rem, 1.421rem + 0.7689vw, 2.3438rem);
  --step-3: clamp(1.944rem, 1.673rem + 1.0472vw, 2.9297rem);
  --step-4: clamp(2.3328rem, 1.9674rem + 1.4123vw, 3.6621rem);
  --step-5: clamp(2.7994rem, 2.3105rem + 1.8893vw, 4.5776rem);
  --step-6: clamp(3.3592rem, 2.7097rem + 2.5103vw, 5.722rem);
  --step-7: clamp(4.0311rem, 3.173rem + 3.3163vw, 7.1526rem);
}

img {
  max-width: 100%;
  height: auto;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}

body {
  font-family: "garamond-premier-pro-subhead", serif;
  color: var(--c-black);
  font-weight: 400;
  font-style: normal;
  font-size: var(--step-1);
}

main {
  background-image: url("./../assets/background.webp");
  background-repeat: repeat;
}

h1 {
  font-family: arsenica-variable, sans-serif;
  font-variation-settings: "wght" 300, "opsz" 1000;
  font-size: var(--step-6);
  color: var(--c-black);
  font-weight: 500;
  margin-block-start: 2rem;
  line-height: 3rem;
}

.hero {
  height: 80vh;
}

.hero__title--right {
  display: block;
  text-align: end;
  margin-block-start: 1rem;
}

.mobile__container-intro {
  width: 100%;
  margin: 0 auto;
}

.mobile__container {
  width: 90%;
  margin: 0 auto;
}

.header {
  padding-block-start: 1rem;
}

/* .logo-image {
  width: 40%;
  grid-area: 1 / 1 / 2 / 3;
  justify-self: center;
} */

.burger-menu {
  grid-area: 1 / 1 / 2 / 3;
  /* position: fixed; */
  right: 0px;
  z-index: 5;
}

.burger-menu--opened {
  position: static;
}

.nav a:any-link {
  text-decoration: none;
}

.nav {
  max-width: 100%;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.nav--fixed {
  position: fixed;
  width: 100%;
  height: 100vh;
  top: 0;
  padding-top: 1rem;
  background-color: var(--c-white);
}

.nav__button {
  grid-row: 1;
  grid-column: 2;
  align-self: flex-start;
  justify-self: end;
  border: none;
  font-size: 1rem;
  line-height: 2;
  background: transparent;
  appearance: none;
  color: var(--c-accent);
  margin-inline-end: 2rem;
  margin-block-start: 3rem;
}

.nav__button--center {
  margin-block-start: 3rem;
}

.nav__button svg {
  width: 1.5rem;
  height: 1.5rem;
}

.nav__list {
  grid-area: 3 / 1 / 4 / 3;
}

.nav__list a {
  color: var(--c-black);
  font-size: var(--step-3);
  font-family: arsenica-variable, sans-serif;
  font-variation-settings: "wght" 300, "opsz" 1000;
}

.nav__link {
  display: block;
  text-align: center;
  padding: 0.4em;
}

.nav__link:hover {
  background-color: var(--primary-color);
}

.nav__name {
  color: var(--c-accent);
  font-weight: 400;
  font-size: var(--step-0);
  grid-area: 2 / 1 / 3 / 3;
  margin-inline: 8rem;
  margin-block-end: 1rem;
  padding-block-end: 0.7rem;
  text-align: center;
  align-self: flex-end;
  border-bottom: solid 2px var(--c-accent);
}

.menu-visit__section {
  grid-area: 4 / 1 / 5 / 3;
  justify-self: center;
  align-self: center;
  width: 100%;
  height: 100%;
  padding-block: 2rem 1rem;
  background-image: url("./../assets/transitionink.webp");
  background-position: center;
  background-size: cover;
  display: grid;
  align-content: center;
}

.menu-visit__button {
  font-size: var(--step-0);
  margin-block: 2rem 1rem;
  display: grid;
  justify-content: center;
  align-self: center;
}

.menu-visit__button a {
  font-style: italic;
  border: 1px solid var(--c-white);
  color: var(--c-white);
  padding-inline: 2rem;
  padding-block: 1rem;
}

.nav__logo-image {
  width: 30%;
  grid-area: 1 / 1 / 2 / 3;
  justify-self: center;
}

.language-selector {
  display: flex;
  gap: 0.2rem;
  justify-content: center;
  margin-block-end: 3rem;
}

.language {
  font-family: "arsenica-variable", sans-serif;
  font-variation-settings: "wght" 300, "opsz" 1000;
  font-size: var(--step-0);
  background: none;
  border: none;
  cursor: pointer;
  font-weight: normal;
  color: var(--c-black);
}

.language.active {
  font-variation-settings: "wght" 700, "opsz" 1000;
  color: var(--c-accent);
}

.hero {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 3fr 1fr;
  background-image: url(../assets/transitioninkcropped.avif);
  background-position: bottom;
  background-size: contain;
  background-repeat: no-repeat;
}

.hero__image {
  grid-area: 1 / 1 / 2 / 3;
  width: 60%;
  align-self: flex-end;
}

.hero__title {
  grid-area: 1 / 1 / 2 / 3;
}

.scroll-down {
  font-size: var(--step-0);
  text-align: center;
  grid-area: 2 / 1 / 3 / 3;
}

.intro {
  background-color: var(--c-black);
  color: var(--c-white);
  padding: 15%;
}

.intro__quote {
  font-size: var(--step-5);
  padding-inline-start: 2rem;
  font-weight: 500;
  border-left: 2px solid var(--c-accent);
}

.red {
  color: var(--c-accent);
}

.italic {
  font-style: italic;
}

.intro p {
  padding-block-end: 1.5rem;
}

.intro__quote-caption {
  font-size: var(--step-0);
  font-weight: 400;
  margin-inline-start: 2rem;
  margin-block-start: 0.5rem;
  margin-block-end: 2rem;
}

.bigger {
  font-size: var(--step-4);
}

.highlight {
  font-weight: 700;
  color: var(--c-accent);
}

.intro hr {
  border: 0;
  height: 2px;
  background: var(--c-accent);
  margin-block: 3rem;
  margin-inline: 1%;
  width: 60%;
}

.antwerp-image__container {
  grid-area: 1 / 1 / 2 / 2;
  width: 100%;
  height: 40vh;
  overflow: hidden;
  position: relative;
}

.antwerp-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: 90% center;
  transition: transform 0.3s ease;
}
/* ... */

